tests/baselines/reference/collisionArgumentsFunction(strict=true).errors.txt
collisionArgumentsFunction.ts(2,13): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(2,13): error TS2396: Duplicate identifier 'arguments'. Compiler uses 'arguments' to initialize rest parameters.
collisionArgumentsFunction.ts(2,32): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(3,9): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(5,25): error TS2396: Duplicate identifier 'arguments'. Compiler uses 'arguments' to initialize rest parameters.
collisionArgumentsFunction.ts(5,25): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(5,28): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(6,9): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(8,20): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(9,9): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(12,18): error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(12,32): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(13,18): error TS7010: 'f21', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(13,41): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(14,18): error TS7010: 'f2NoError', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(16,13): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(17,9): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(20,9): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(23,10): error TS7010: 'f4', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(23,13): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(23,32): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(24,10): error TS7010: 'f4', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(24,13): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(24,32): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(25,13): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(25,13): error TS2396: Duplicate identifier 'arguments'. Compiler uses 'arguments' to initialize rest parameters.
collisionArgumentsFunction.ts(25,29): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(26,9): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(28,10): error TS7010: 'f42', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(28,25): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(28,28): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(29,10): error TS7010: 'f42', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(29,25): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(29,28): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(30,22): error TS2396: Duplicate identifier 'arguments'. Compiler uses 'arguments' to initialize rest parameters.
collisionArgumentsFunction.ts(30,22): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(30,25): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(31,9): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(33,10): error TS7010: 'f4NoError', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(33,20): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(34,10): error TS7010: 'f4NoError', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(34,20): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(35,20): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(36,9): error TS1100: Invalid use of 'arguments' in strict mode.
collisionArgumentsFunction.ts(39,18): error TS7010: 'f5', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(39,40): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(40,18): error TS7010: 'f5', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(40,40): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(41,18): error TS7010: 'f52', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(41,33): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(42,18): error TS7010: 'f52', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(42,33): error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
collisionArgumentsFunction.ts(43,18): error TS7010: 'f6', which lacks return-type annotation, implicitly has an 'any' return type.
collisionArgumentsFunction.ts(44,18): error TS7010: 'f6', which lacks return-type annotation, implicitly has an 'any' return type.


==== collisionArgumentsFunction.ts (54 errors) ====
    // Functions
    function f1(arguments: number, ...restParameters) { //arguments is error
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                ~~~~~~~~~~~~~~~~~
!!! error TS2396: Duplicate identifier 'arguments'. Compiler uses 'arguments' to initialize rest parameters.
                                   ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
        var arguments = 10; // no error
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }
    function f12(i: number, ...arguments) { //arguments is error
                            ~~~~~~~~~~~~
!!! error TS2396: Duplicate identifier 'arguments'. Compiler uses 'arguments' to initialize rest parameters.
                            ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
                               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        var arguments: any[]; // no error
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }
    function f1NoError(arguments: number) { // no error
                       ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        var arguments = 10; // no error
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }
    
    declare function f2(i: number, ...arguments); // no error - no code gen
                     ~~
!!! error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
                                   ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
    declare function f21(arguments: number, ...rest); // no error - no code gen
                     ~~~
!!! error TS7010: 'f21', which lacks return-type annotation, implicitly has an 'any' return type.
                                            ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    declare function f2NoError(arguments: number); // no error
                     ~~~~~~~~~
!!! error TS7010: 'f2NoError', which lacks return-type annotation, implicitly has an 'any' return type.
    
    function f3(...restParameters) {
                ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
        var arguments = 10; // no error
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }
    function f3NoError() {
        var arguments = 10; // no error
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }
    
    function f4(arguments: number, ...rest); // no codegen no error
             ~~
!!! error TS7010: 'f4', which lacks return-type annotation, implicitly has an 'any' return type.
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                                   ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    function f4(arguments: string, ...rest); // no codegen no error
             ~~
!!! error TS7010: 'f4', which lacks return-type annotation, implicitly has an 'any' return type.
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                                   ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    function f4(arguments: any, ...rest) { // error
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                ~~~~~~~~~~~~~~
!!! error TS2396: Duplicate identifier 'arguments'. Compiler uses 'arguments' to initialize rest parameters.
                                ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
        var arguments: any; // No error
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }
    function f42(i: number, ...arguments); // no codegen no error
             ~~~
!!! error TS7010: 'f42', which lacks return-type annotation, implicitly has an 'any' return type.
                            ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
                               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    function f42(i: string, ...arguments); // no codegen no error
             ~~~
!!! error TS7010: 'f42', which lacks return-type annotation, implicitly has an 'any' return type.
                            ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
                               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    function f42(i: any, ...arguments) { // error
                         ~~~~~~~~~~~~
!!! error TS2396: Duplicate identifier 'arguments'. Compiler uses 'arguments' to initialize rest parameters.
                         ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
                            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        var arguments: any[]; // No error
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }
    function f4NoError(arguments: number); // no error
             ~~~~~~~~~
!!! error TS7010: 'f4NoError', which lacks return-type annotation, implicitly has an 'any' return type.
                       ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    function f4NoError(arguments: string); // no error
             ~~~~~~~~~
!!! error TS7010: 'f4NoError', which lacks return-type annotation, implicitly has an 'any' return type.
                       ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    function f4NoError(arguments: any) { // no error
                       ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        var arguments: any; // No error
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }
    
    declare function f5(arguments: number, ...rest); // no codegen no error
                     ~~
!!! error TS7010: 'f5', which lacks return-type annotation, implicitly has an 'any' return type.
                                           ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    declare function f5(arguments: string, ...rest); // no codegen no error
                     ~~
!!! error TS7010: 'f5', which lacks return-type annotation, implicitly has an 'any' return type.
                                           ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    declare function f52(i: number, ...arguments); // no codegen no error
                     ~~~
!!! error TS7010: 'f52', which lacks return-type annotation, implicitly has an 'any' return type.
                                    ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
    declare function f52(i: string, ...arguments); // no codegen no error
                     ~~~
!!! error TS7010: 'f52', which lacks return-type annotation, implicitly has an 'any' return type.
                                    ~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'arguments' implicitly has an 'any[]' type.
    declare function f6(arguments: number); // no codegen no error
                     ~~
!!! error TS7010: 'f6', which lacks return-type annotation, implicitly has an 'any' return type.
    declare function f6(arguments: string); // no codegen no error
                     ~~
!!! error TS7010: 'f6', which lacks return-type annotation, implicitly has an 'any' return type.